--- a/index.html
+++ b/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
-<html>
+<html lang="so">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+  <meta charset="UTF-8">
+  <title>Raadi Macallin</title>
+
+  <!-- FONT AWESOME ICONS -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<h1>Anaz c/caziz maxamed</h1>
+
+<!-- HERO -->
+<section class="hero">
+  <div class="hero-text">
+    <small class="top-label">WOO SITEPCOM QAADIATEE</small>
+
+    <h1>
+      Raadi You <br>
+      Macallinkaaga <br>
+      Ugu Habboon
+    </h1>
+
+    <p>
+      Waxaan kaa caawinaynaa inaad hesho macallinka saxda ah
+      ee kugu habboon waqtigaaga iyo baahidaada.
+    </p>
+
+    <div class="buttons">
+      <button class="btn-primary">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        Bilow Raadinta
+      </button>
+
+      <button class="btn-secondary">
+        <i class="fa-solid fa-play"></i>
+        Sii Akhris
+      </button>
+    </div>
+  </div>
+
+  <div class="hero-images">
+    <img src="./1.jpeg">
+    <img src="./2.jpeg">
+    <img src="./3.jpeg">
+    <img src="./4.jpeg">
+  </div>
+
+  <!-- SHAPES -->
+  <div class="shape circle"></div>
+  <div class="shape wave"></div>
+</section>
+
+<!-- STATS -->
+<section class="stats">
+  <div>
+    <h3>870</h3>
+    <span>Khabiir Macallimiin ah</span>
+  </div>
+  <div>
+    <h3>20,000+</h3>
+    <span>Saacado waxbarasho ah</span>
+  </div>
+  <div>
+    <h3>298</h3>
+    <span>Madooyin & Koorsoyin</span>
+  </div>
+  <div>
+    <h3>72,920</h3>
+    <span>Arday Isdiiwaan geliyay</span>
+  </div>
+</section>
+
+<!-- FEATURES -->
+<section class="features">
+  <h2>Adeegyada Waxbarashada Online-ka</h2>
+
+  <div class="feature-box">
+    <div class="card">
+      <i class="fa-solid fa-video icon blue"></i>
+      <h4>Koorsooyin Toos ah</h4>
+      <p>Casharro live ah oo lala qaato macallin.</p>
+    </div>
+
+    <div class="card">
+      <i class="fa-solid fa-clock icon green"></i>
+      <h4>24/7 Hel-karnaan</h4>
+      <p>Mar walba diyaar u ah ardayda.</p>
+    </div>
+
+    <div class="card">
+      <i class="fa-solid fa-chalkboard icon orange"></i>
+      <h4>Sabuuro Isdhexgal</h4>
+      <p>Sharaxaad fudud oo muuqaal ah.</p>
+    </div>
+
+    <div class="card">
+      <i class="fa-solid fa-star icon pink"></i>
+      <h4>Qiimeyn Joogto ah</h4>
+      <p>La socod horumar joogto ah.</p>
+    </div>
+  </div>
+</section>
+
+<!-- INFO -->
+<section class="info">
+  <div class="info-img">
+    <img src="./5.jpeg">
+  </div>
+
+  <div class="info-text">
+    <h2>Macallin Kuu Habboon Jadwalkaga</h2>
+    <p>
+      Door macallin la jaan qaadaya waqtigaaga iyo heerkaaga.
+    </p>
+    <button class="btn-primary">
+      <i class="fa-solid fa-arrow-right"></i>
+      Bilow Raadinta
+    </button>
+  </div>
+</section>
+
+<!-- INFO 2 -->
+<section class="info reverse">
+  <div class="info-text">
+    <h2>Macallimiin Khibrad iyo Aqoon Leh</h2>
+    <p>
+      Macallimiin xirfad sare leh oo si taxaddar leh loo xushay.
+    </p>
+    <button class="btn-primary">
+      <i class="fa-solid fa-user-graduate"></i>
+      Bilow Raadinta
+    </button>
+  </div>
+
+  <div class="info-img">
+    <img src="./6.jpeg">
+  </div>
+</section>
+
+<!-- CATEGORIES -->
+<section class="categories">
+  <h2>Ka Raadi Macallin Maaddo Cad</h2>
+
+  <div class="category-grid">
+    <div><i class="fa-solid fa-gears"></i> Engineering</div>
+    <div><i class="fa-solid fa-code"></i> Barnaamij</div>
+    <div><i class="fa-solid fa-language"></i> Luuqad</div>
+    <div><i class="fa-solid fa-flask"></i> Cilmiga</div>
+    <div><i class="fa-solid fa-landmark"></i> Taarikh</div>
+    <div><i class="fa-solid fa-chart-line"></i> Dhaqaale</div>
+    <div><i class="fa-solid fa-palette"></i> Web Design</div>
+    <div><i class="fa-solid fa-laptop-code"></i> Naqshad Web</div>
+  </div>
+</section>
 
 </body>
 </html>
